--- a/examples/examples2.ipynb
+++ b/examples/examples2.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "13b3807b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -61,17 +52,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dd953b34",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Choose number of voters n and the number of candidates m\n",
-    "n = 200\n",
-    "m = 50\n",
+    "n = 20\n",
+    "m = 8\n",
     "\n",
     "# Choose the number of winners for the election\n",
-    "k = 20"
+    "k = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "51d3f5a7-3499-4a2d-a34e-2c36ae19c04d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(99877)\n",
+    "prof = uniform_profile(n,m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "d082372e-8f6f-4320-88b8-c57b0e57d687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10\n",
+    "m = 3\n",
+    "k = 2\n",
+    "prof = np.array([\n",
+    "    [0,0,0,0,1,1,1,2,2,2],\n",
+    "    [1,1,1,1,0,0,0,0,0,0],\n",
+    "    [2,2,2,2,2,2,2,1,1,1]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "8cc1667e-f55f-4bf2-af23-9adac65d5b93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 20\n",
+    "m = 8\n",
+    "k = 5\n",
+    "prof = np.array([\n",
+    "      [0, 7, 5, 1, 0, 4, 1, 0, 1, 2, 0, 7, 5, 2, 5, 3, 4, 4, 5, 7],\n",
+    "      [5, 2, 0, 0, 6, 1, 0, 1, 5, 6, 3, 4, 7, 3, 7, 2, 5, 6, 0, 3],\n",
+    "      [4, 3, 4, 7, 7, 0, 4, 7, 7, 5, 2, 6, 3, 0, 0, 1, 1, 3, 2, 5],\n",
+    "      [6, 0, 2, 6, 4, 7, 5, 6, 4, 7, 1, 0, 2, 1, 1, 5, 0, 1, 7, 0],\n",
+    "      [1, 5, 3, 2, 5, 6, 6, 3, 2, 1, 7, 1, 6, 5, 6, 6, 7, 0, 4, 2],\n",
+    "      [3, 1, 1, 4, 2, 3, 3, 4, 3, 0, 5, 2, 0, 7, 3, 7, 6, 7, 3, 1],\n",
+    "      [7, 4, 7, 5, 1, 2, 2, 5, 6, 4, 4, 5, 1, 6, 2, 0, 2, 2, 6, 4],\n",
+    "      [2, 6, 6, 3, 3, 5, 7, 2, 0, 3, 6, 3, 4, 4, 4, 4, 3, 5, 1, 6]\n",
+    "   ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "948548ba-a983-4c00-9c1b-9667692d315b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Election: \n",
+      "Round: 0\n",
+      "voter weights: [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "voter indices: [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "scores: [4. 3. 2. 1. 3. 4. 0. 3.]\n",
+      "elected: [0 5]\n",
+      "\n",
+      "Round: 2\n",
+      "voter weights: [0. 1. 0. 1. 0. 1. 1. 0. 1. 1. 0. 1. 0. 1. 0. 1. 1. 1. 0. 1.]\n",
+      "voter indices: [2 0 2 0 1 0 0 1 0 0 1 0 1 0 1 0 0 0 2 0]\n",
+      "scores: [0. 3. 2. 1. 3. 0. 0. 3.]\n",
+      "eliminated: 6\n",
+      "\n",
+      "Round: 3\n",
+      "voter weights: [0. 1. 0. 1. 0. 1. 1. 0. 1. 1. 0. 1. 0. 1. 0. 1. 1. 1. 0. 1.]\n",
+      "voter indices: [2 0 2 0 1 0 0 1 0 0 1 0 1 0 1 0 0 0 2 0]\n",
+      "scores: [0. 3. 2. 1. 3. 0. 0. 3.]\n",
+      "eliminated: 3\n",
+      "\n",
+      "Round: 4\n",
+      "voter weights: [0. 1. 0. 1. 0. 1. 1. 0. 1. 1. 0. 1. 0. 1. 0. 1. 1. 1. 0. 1.]\n",
+      "voter indices: [2 0 2 0 1 0 0 1 0 0 1 0 1 0 1 1 0 0 2 0]\n",
+      "scores: [0. 3. 3. 0. 3. 0. 0. 3.]\n",
+      "eliminated: 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "stv = STV(transfer_type = 'fractional', verbose = True)\n",
+    "winners = stv.elect(prof,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "6ef69b6d-c37d-4521-80b2-f5ce3cc8de47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import contextlib\n",
+    "from votekit.elections import STV as votekit_STV\n",
+    "from votekit.ballot import Ballot\n",
+    "from votekit.pref_profile import PreferenceProfile\n",
+    "from votekit.elections import fractional_transfer, random_transfer \n",
+    "\n",
+    "ballots = [Ballot(ranking = [{str(j)} for j in prof[:,i]], weight = 1) for i in range(n)]\n",
+    "votekit_prof = PreferenceProfile(ballots= ballots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "705d7f8e-fc43-4c34-bfda-890a1eb3623e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial tiebreak was unsuccessful, performing random tiebreak\n"
+     ]
+    }
+   ],
+   "source": [
+    "#with contextlib.redirect_stdout(None):\n",
+    "election = votekit_STV(votekit_prof, k, transfer = fractional_transfer)\n",
+    "votekit_winners = election.get_elected()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "ef4befb8-03a9-4d21-b357-f91b7e23c40f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       Status  Round\n",
+       "5     Elected      1\n",
+       "0     Elected      1\n",
+       "1     Elected      5\n",
+       "7     Elected      5\n",
+       "4     Elected      6\n",
+       "2  Eliminated      4\n",
+       "3  Eliminated      3\n",
+       "6  Eliminated      2"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "election"
    ]
   },
   {
