--- a/examples/2bloc.ipynb
+++ b/examples/2bloc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "91fb4ba2",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
+   "id": "835d6c50-5d87-4068-986b-9f966943d5fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(it.combinations(range(4), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "326071cb",
    "metadata": {},
    "outputs": [],
@@ -52,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "022d6947-1fb6-480c-b6bb-2199fdd79575",
    "metadata": {},
    "outputs": [],
@@ -85,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "9f1e19a7",
    "metadata": {},
    "outputs": [],
@@ -96,6 +117,44 @@
     "\n",
     "# Choose the number of winners for the election\n",
     "k = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1f9a534a-6d08-45f1-abbb-103d020fe4b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Means and standard deviations for each of the two voter distributions\n",
+    "means = [[0, -1], [0, 1]]\n",
+    "stds = [1/6, 1/6]\n",
+    "group_sizes = [50,50]  # Group Sizes (50 in each group)\n",
+    "\n",
+    "# Create a list of voter parameters -- with each set of parameters being a dict\n",
+    "voter_params = [{'loc': None, 'scale': None, 'size': 2} for _ in range(len(group_sizes))]\n",
+    "for i,mean in enumerate(means):\n",
+    "    voter_params[i]['loc'] = mean\n",
+    "\n",
+    "for i,std in enumerate(stds):\n",
+    "    voter_params[i]['scale'] = std\n",
+    "    \n",
+    "# Define the single set of candidate paramters\n",
+    "candidate_params = [{'low': -5, 'high': 5, 'size': 2}]\n",
+    "\n",
+    "# define a distance function between voters and candidates\n",
+    "distance = lambda point1, point2: np.linalg.norm(point1 - point2)\n",
+    "\n",
+    "# Create the group spatial generator object!\n",
+    "two_party_generator = GroupSpatial(\n",
+    "    n_voter_groups = 2,\n",
+    "    n_candidate_groups = 1, \n",
+    "    voter_dist_fns = [np.random.normal]*len(group_sizes),\n",
+    "    voter_dist_fn_params = voter_params,\n",
+    "    candidate_dist_fns = [np.random.uniform],\n",
+    "    candidate_dist_fn_params = candidate_params,\n",
+    "    distance_fn = distance\n",
+    ")"
    ]
   },
   {
@@ -124,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "373680be",
    "metadata": {},
    "outputs": [],
@@ -134,7 +193,7 @@
     "elections_dict = {SNTV:{}, Bloc:{}, Borda:{}, STV:{'transfer_type' : 'weighted-fractional'},\n",
     "                 ChamberlinCourant:{'solver' : 'PULP_CBC_CMD'}, GreedyCC:{},\n",
     "                  Monroe:{'solver' : 'PULP_CBC_CMD'}, \n",
-    "                  PluralityVeto:{}, ExpandingApprovals: {},\n",
+    "                  PluralityVeto:{'q':2}, ExpandingApprovals: {},\n",
     "                 SMRD:{}, OMRD:{}, DMRD:{'rho': 0.5}}\n",
     "\n",
     "# List of elections being used\n",
@@ -142,12 +201,12 @@
     "                  PluralityVeto, ExpandingApprovals, SMRD, OMRD, DMRD]\n",
     "\n",
     "# Number of samples to compute with\n",
-    "n_samples = 10"
+    "n_samples = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "c4811115",
    "metadata": {},
    "outputs": [],
@@ -159,7 +218,7 @@
     "np.random.seed(918717)\n",
     "f = '../data/2bloc_new.npz'\n",
     "generator_input = [\n",
-    "    {'voter_group_sizes': two_party_G,\n",
+    "    {'voter_group_sizes': group_sizes,\n",
     "     'candidate_group_sizes': [m]}\n",
     "]\n",
     "\n",
@@ -170,7 +229,7 @@
     "    generator_input,\n",
     "    k,\n",
     "    dim = 2,\n",
-    "    filename = f\n",
+    "    filename = None\n",
     ")\n",
     "\n",
     "result_dict = result_list[0]"
@@ -178,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "4209a61b",
    "metadata": {},
    "outputs": [],
@@ -317,23 +376,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "d56875eb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j, e \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(elections):\n\u001b[1;32m     22\u001b[0m     winner_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mwhere(result_dict[e][i])[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m---> 23\u001b[0m     worst_bloc \u001b[38;5;241m=\u001b[39m \u001b[43mheuristic_worst_bloc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcst_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwinner_indices\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     worst_labels \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(n)\n\u001b[1;32m     25\u001b[0m     worst_labels[worst_bloc] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "File \u001b[0;32m~/voting/Metric-Voting/src/metric_voting/measurements.py:403\u001b[0m, in \u001b[0;36mheuristic_worst_bloc\u001b[0;34m(cst_array, winner_indices)\u001b[0m\n\u001b[1;32m    401\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m comb \u001b[38;5;129;01min\u001b[39;00m combinations(\u001b[38;5;28mrange\u001b[39m(m), s):\n\u001b[1;32m    402\u001b[0m     sum_of_distances \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(cst_array[\u001b[38;5;28mlist\u001b[39m(comb), :], axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m--> 403\u001b[0m     closest \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margsort\u001b[49m\u001b[43m(\u001b[49m\u001b[43msum_of_distances\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43msize\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    404\u001b[0m     closest_mask \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(n, dtype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m)\n\u001b[1;32m    405\u001b[0m     closest_mask[closest] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##############################################################################################################\n",
     "# Compute results:\n",
@@ -344,7 +390,7 @@
     "# 2) Or instead treat everyone as one group\n",
     "overall_ineff = {e : np.zeros(n_samples) for e in elections}\n",
     "# 3) Or for the estimated worst case voter block\n",
-    "worst_ineff = {e : np.zeros(n_samples) for e in elections}\n",
+    "#worst_ineff = {e : np.zeros(n_samples) for e in elections}\n",
     "\n",
     "group_select = 0\n",
     "for i in range(n_samples):\n",
@@ -357,21 +403,21 @@
     "    \n",
     "    for j, e in enumerate(elections):\n",
     "        winner_indices = np.where(result_dict[e][i])[0]\n",
-    "        worst_bloc = heuristic_worst_bloc(cst_array, winner_indices)\n",
-    "        worst_labels = np.zeros(n)\n",
-    "        worst_labels[worst_bloc] = 1\n",
+    "        #worst_bloc = heuristic_worst_bloc(cst_array, winner_indices)\n",
+    "        #worst_labels = np.zeros(n)\n",
+    "        #worst_labels[worst_bloc] = 1\n",
     "        \n",
     "        grp_ineff = group_inefficiency(cst_array, winner_indices, group_labels, group_select)\n",
     "        ovr_ineff = group_inefficiency(cst_array, winner_indices, overall_labels, group_select)\n",
-    "        wrst_ineff = group_inefficiency(cst_array, winner_indices, worst_labels, 1)\n",
+    "        #wrst_ineff = group_inefficiency(cst_array, winner_indices, worst_labels, 1)\n",
     "        \n",
     "        group_ineff[e][i] = grp_ineff\n",
     "        overall_ineff[e][i] = ovr_ineff\n",
-    "        worst_ineff[e][i] = wrst_ineff\n",
+    "        #worst_ineff[e][i] = wrst_ineff\n",
     "        \n",
     "group_data = np.array([values[~np.isnan(values)] for values in group_ineff.values()])\n",
     "overall_data = np.array([values[~np.isnan(values)] for values in overall_ineff.values()])\n",
-    "worst_data = np.array([values[~np.isnan(values)] for values in worst_ineff.values()])\n",
+    "#worst_data = np.array([values[~np.isnan(values)] for values in worst_ineff.values()])\n",
     "labels = ['CC' if e == 'ChamberlinCourant' else e for e in elections]\n",
     "labels = ['Expanding' if e == 'ExpandingApprovals' else e for e in labels]\n",
     "##########################################################################################################"
@@ -379,58 +425,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "18de48a7-a927-46ed-8819-4e4aae01fde8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "459"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "de7238af-82e3-40cd-9ad7-20762e410e01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000,)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "worst_ineff['SNTV'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "41adf1af-ba81-4064-8cad-947fb162fee4",
    "metadata": {},
    "outputs": [],
    "source": [
     "group_data = np.array([values[~np.isnan(values)] for values in group_ineff.values()])[:,:400]\n",
     "overall_data = np.array([values[~np.isnan(values)] for values in overall_ineff.values()])[:,:400]\n",
-    "worst_data = np.array([values[~np.isnan(values)] for values in worst_ineff.values()])[:,:400]\n",
+    "#worst_data = np.array([values[~np.isnan(values)] for values in worst_ineff.values()])[:,:400]\n",
     "labels = ['CC' if e == 'ChamberlinCourant' else e for e in elections]\n",
     "labels = ['Expanding' if e == 'ExpandingApprovals' else e for e in labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8c852b40-70d9-4b23-8cfe-ba5f309921de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(group_data < 1)"
    ]
   },
   {
