--- a/examples/grid.ipynb
+++ b/examples/grid.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "7742ed8c-3eaf-4b4e-82e8-e4df8acc52d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -80,6 +71,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "4ce72450-1359-4722-afca-244d6b8cfedb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "candidate_positions = np.array(\n",
+    "        [[-1,1]] * 4 +\n",
+    "        [[0,1]] * 4 +\n",
+    "        [[1,1]] * 4 +\n",
+    "        [[-1,0]] * 4 +\n",
+    "        [[0,0]] * 4 +\n",
+    "        [[1,0]] * 4 +\n",
+    "        [[-1,-1]] * 4 +\n",
+    "        [[0,-1]] * 4 +\n",
+    "        [[1,-1]] * 4\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "13ddec16-b299-490a-8816-ea4d0ec0cb2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1,  1],\n",
+       "       [-1,  1],\n",
+       "       [-1,  1],\n",
+       "       [-1,  1],\n",
+       "       [ 0,  1],\n",
+       "       [ 0,  1],\n",
+       "       [ 0,  1],\n",
+       "       [ 0,  1],\n",
+       "       [ 1,  1],\n",
+       "       [ 1,  1],\n",
+       "       [ 1,  1],\n",
+       "       [ 1,  1],\n",
+       "       [-1,  0],\n",
+       "       [-1,  0],\n",
+       "       [-1,  0],\n",
+       "       [-1,  0],\n",
+       "       [ 0,  0],\n",
+       "       [ 0,  0],\n",
+       "       [ 0,  0],\n",
+       "       [ 0,  0],\n",
+       "       [ 1,  0],\n",
+       "       [ 1,  0],\n",
+       "       [ 1,  0],\n",
+       "       [ 1,  0],\n",
+       "       [-1, -1],\n",
+       "       [-1, -1],\n",
+       "       [-1, -1],\n",
+       "       [-1, -1],\n",
+       "       [ 0, -1],\n",
+       "       [ 0, -1],\n",
+       "       [ 0, -1],\n",
+       "       [ 0, -1],\n",
+       "       [ 1, -1],\n",
+       "       [ 1, -1],\n",
+       "       [ 1, -1],\n",
+       "       [ 1, -1]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candidate_positions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "id": "e42bf985-47cb-4390-bbe5-af80c4cf891e",
    "metadata": {},
@@ -101,6 +168,27 @@
     "bloc1 = np.random.normal(loc = [0,1], scale = 1/6, size = (bloc_size,2))\n",
     "bloc2 = np.random.normal(loc = [0,-1], scale = 1/6, size = (bloc_size,2))\n",
     "voter_positions = np.vstack((bloc1, bloc2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "858daf87-9f35-4868-8558-01872937bec9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(np.array([0,1]) - np.array([0.1,1]))"
    ]
   },
   {
