--- a/examples/2bloc.ipynb
+++ b/examples/2bloc.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "91fb4ba2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "835d6c50-5d87-4068-986b-9f966943d5fc",
    "metadata": {},
    "outputs": [
@@ -41,7 +50,7 @@
        "[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9f1e19a7",
    "metadata": {},
    "outputs": [],
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "1f9a534a-6d08-45f1-abbb-103d020fe4b6",
    "metadata": {},
    "outputs": [],
@@ -158,6 +167,191 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "138f4fef-0f9f-4403-af8d-65c8bdaf2031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now each call .generate() will make a profile with random candidate and voter positions\n",
+    "profile, \\\n",
+    "candidate_positions, \\\n",
+    "voter_positions, \\\n",
+    "candidate_labeles, \\\n",
+    "voter_labels = two_party_generator.generate(voter_group_sizes = group_sizes, \n",
+    "                                            candidate_group_sizes = [m])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a607c689-c07f-43ea-83f3-b00c9683400d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = borda_matrix(profile, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d7fbb1f0-6fe8-4755-a121-6ef0b92ebe38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13., 14.])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = np.zeros(n, dtype = bool)\n",
+    "mask[0] = True\n",
+    "mask[1] = True\n",
+    "\n",
+    "B[0, mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1cbc61ca-90ad-4888-9f1b-c766e5af89ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1f133037-c6b2-4622-8f1c-e1a25008058f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.81434943,  1.26022511],\n",
+       "       [-1.52201491,  1.41063899],\n",
+       "       [-0.66412537, -1.79212631],\n",
+       "       [ 0.19373735, -1.67886265]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candidate_positions[[0,3,5,13],:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "9772df6f-04c3-497a-9365-1262af7390ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  5,  7, 13])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E = CommitteeVeto()\n",
+    "E.elect(profile,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f5429a35-1dbe-44bc-a720-d53a4ae3f2e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.zeros(3, dtype = bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "737c8cd0-43a0-4f88-8960-663cf5cdf453",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = {'a':2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "85d05d86-302d-4f94-b4da-946314ce10fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'q' in p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efd92720-0180-4db5-bff7-54ab9bd614c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elections_dict = {SNTV:{}, Bloc:{}, Borda:{}, Harmonic:{'solver' : 'GUROBI_CMD'},\n",
+    "                  STV:{'transfer_type' : 'weighted-fractional'},\n",
+    "                 ChamberlinCourant:{'solver' : 'GUROBI_CMD'}, GreedyCC:{},\n",
+    "                  Monroe:{'solver' : 'GUROBI_CMD'}, GreedyMonroe:{}, \n",
+    "                  PluralityVeto:{'q': k}, ExpandingApprovals: {},\n",
+    "                 SMRD:{}, OMRD:{}, DMRD:{'rho': 0.5}}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e1092747",
    "metadata": {},
@@ -183,30 +377,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "id": "373680be",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a dictionary of elections with input parameters given \n",
     "# (really only need it for DMRD but its implemented this way for completeness) :)\n",
-    "elections_dict = {SNTV:{}, Bloc:{}, Borda:{}, STV:{'transfer_type' : 'weighted-fractional'},\n",
-    "                 ChamberlinCourant:{'solver' : 'PULP_CBC_CMD'}, GreedyCC:{},\n",
-    "                  Monroe:{'solver' : 'PULP_CBC_CMD'}, \n",
-    "                  PluralityVeto:{'q':2}, ExpandingApprovals: {},\n",
+    "elections_dict = {SNTV:{}, Bloc:{}, Borda:{}, Harmonic:{},\n",
+    "                  STV:{'transfer_type' : 'weighted-fractional'},\n",
+    "                 ChamberlinCourant:{}, GreedyCC:{},\n",
+    "                  Monroe:{}, GreedyMonroe:{}, \n",
+    "                  PluralityVeto:{}, CommitteeVeto:{'q':k}, ExpandingApprovals: {},\n",
     "                 SMRD:{}, OMRD:{}, DMRD:{'rho': 0.5}}\n",
     "\n",
-    "# List of elections being used\n",
-    "elections_list = [SNTV, Bloc, Borda, STV, ChamberlinCourant, GreedyCC, Monroe, \n",
-    "                  PluralityVeto, ExpandingApprovals, SMRD, OMRD, DMRD]\n",
-    "\n",
     "# Number of samples to compute with\n",
-    "n_samples = 100"
+    "n_samples = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "id": "c4811115",
    "metadata": {},
    "outputs": [],
@@ -216,7 +407,7 @@
     "\n",
     "# Compute election results and save to memory!\n",
     "np.random.seed(918717)\n",
-    "f = '../data/2bloc_new.npz'\n",
+    "#f = '../data/2bloc_new.npz'\n",
     "generator_input = [\n",
     "    {'voter_group_sizes': group_sizes,\n",
     "     'candidate_group_sizes': [m]}\n",
