--- a/examples/2bloc.ipynb
+++ b/examples/2bloc.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "326071cb",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "4209a61b",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
     "#       to the repository for space constraints. All files necessary for computing \n",
     "#       these datasets are included in the experiments/ folder. \n",
     "\n",
-    "f = '../data/two_bloc/2bloc.npz'\n",
+    "f = '../data/two_bloc/samples.npz'\n",
     "loaded_data = np.load(f)\n",
     "result_dict = {key: loaded_data[key] for key in loaded_data.files}\n",
     "n_samples = result_dict['voters'].shape[0]"
@@ -548,6 +548,14 @@
    ],
    "source": [
     "np.mean(worst_data, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef746907-a45b-4463-94fa-3fea7aeea729",
+   "metadata": {},
+   "source": [
+    "### Heatmap"
    ]
   },
   {
